<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetPin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

<ImageView
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginTop="80dp"
    android:contentDescription="@string/app_name"
    android:src="@drawable/icons8_paper_plane_64"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/otp_verification1"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_otp"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>