<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#3b5998"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:src="@drawable/untitled"
        android:scaleType="fitStart"
        android:background="@color/white"/>

        <ImageButton
            android:id="@+id/history"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:src="@drawable/histroy_icon"
            android:scaleType="fitStart"
            android:background="@color/white"/>

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu_icon"
            android:scaleType="fitStart"
            android:background="@color/white"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:background="#54b9f0"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arrive"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:background="#54b9f0"
        android:text="@string/arrive"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Pause"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/pause"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Resume"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:background="#54b9f0"
        android:text="@string/resume"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Pause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Complete"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/complete"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Resume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/parts"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="#54b9f0"
        android:text="@string/parts"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equipments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equipments"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/equipment"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/expenses"
        app:layout_constraintStart_toEndOf="@+id/parts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/expenses"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/expenses"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/labor"
        app:layout_constraintStart_toEndOf="@+id/equipments"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/labor"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/labor"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expenses"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="#54b9f0"
        android:text="@string/signature"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cam"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/camera"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/attach"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/attach"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/attached_files"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cached"
        app:layout_constraintStart_toEndOf="@+id/cam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cached"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="#54b9f0"
        android:text="@string/cached_n_0"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attach"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/refresh"
        android:layout_width="398dp"
        android:layout_height="50dp"
        android:background="#54b9f0"
        android:text="@string/refresh"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="390dp"

        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/equipments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pause"
        app:layout_constraintVertical_bias="0.458">

        <TextView
            android:id="@+id/look"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:text="LOOKUP"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/jobnumber"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:text="JOB NUMBER"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/jobstatus"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="JOB STATUS"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/techstatus"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="TECH STATUS"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/lead"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="JOB LEAD"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/task"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="TASK"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/schedstart"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="SCHED. START DATE"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/schedduration"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="SCHED. DURATION"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/startdate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="START DATE"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/enddate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="END DATE"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/resumedate"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="RESUME DATE"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/hqnotes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="HQ NOTES"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/timenotes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="TIME NOTES"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/mileage"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="MILEAGE"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/fieldnotes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="FIELD NOTES"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/recommendations"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:text="RECOMMENDATIONS"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>